--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "geist": "^1.4.2",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tldts": "^7.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
