--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swim-set-tracker",
+  "name": "swimsetter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/pro-duotone-svg-icons": "^6.7.2",
+    "@fortawesome/pro-light-svg-icons": "^6.7.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.7.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.7.2",
+    "@fortawesome/pro-thin-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "geist": "^1.4.2",
     "next": "15.3.3",
@@ -28,6 +32,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
